--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ button:hover {
 
 <h2>BONE COUNTY SHERIFF'S OFFICE<br>CANINE DEVELOPMENT REPORT</h2>
 
-<label>Reporting Officer</label>
+<label>Reporting Handler</label>
 <input id="officer" placeholder="John Carter">
 
 <label>Badge Number</label>
@@ -139,3 +139,4 @@ ${evidence}
 
 </body>
 </html>
+
